--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@ Purchase: http://themeforest.net/user/kamleshyadav
 		<div class="container">
 			<div class="row">
 				<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-					<h1>I`m Nancy Martin</h1>
+					<h1>I`m Dorela Karaj</h1>
 				</div>
 			</div>
 		</div>
