Updated about me

--- a/index.html
+++ b/index.html
@@ -85,8 +85,8 @@ Purchase: http://themeforest.net/user/kamleshyadav
 							</div>
 						</div>
 						<div class="prt_about_details">
-							<p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable. If you are going to use a passage of Lorem Ipsum, you need to be sure there isn't anything embarrassing hidden in the middle of text. All the Lorem Ipsum generators on the Internet tend to repeat predefined chunks as necessary, making this the first true generator on the Internet. It uses a dictionary of over 200 Latin words, combined with a handful of model sentence structures.</p>
-							<a href="#" class="prt_btn">Download Resume</a> <a href="#" class="prt_btn">Hire Me</a>
+							<p>I am an experienced Python Developer with a demonstrated history of working in software development. Certified in multiple programming languages and technologies like Python, Javascript, HTML5 and CSS3. Strong engineering background with a Master of Science (MSc) focused in Information Systems from University of Tirana. An experienced lecturer, teaching Computer Science classes in different Universities of Albania. Very Good in communication, team spirit, analyzing, planning and solving various problems during the work day. Interested in the fourth Industrail Revolution - AI, ML and IoT. Fulltime Passionate programmer, Python Addicted, Udemy Scavenger, Constant Upskiller in niche technologies. </p>
+							<a href="#" class="prt_btn">Download Resume</a> <a href="https://www.linkedin.com/in/dorela-karaj/" class="prt_btn">Hire Me</a>
 						</div>
 					</div>
 				</div>
@@ -165,52 +165,68 @@ Purchase: http://themeforest.net/user/kamleshyadav
 								<div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
 									<div class="prt_about_experiencebox">
 										<div class="prt_about_experience_year">
-											<h1>2012</h1>
-											<h4>July to 2013 Sep</h4>
-										</div>
-										<div class="prt_about_experience_info">
-											<h4>Junior Ui/Ux Designer</h4>
-											<span>Amazon</span>
-											<p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam.</p>
-										</div>
-									</div>
-								</div>
-								<div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
-									<div class="prt_about_experiencebox">
-										<div class="prt_about_experience_year">
-											<h1>2013</h1>
-											<h4>Oct to 2014 Dec</h4>
-										</div>
-										<div class="prt_about_experience_info">
-											<h4>Senior Ui/Ux Designer</h4>
-											<span>Adobe</span>
-											<p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam.</p>
-										</div>
-									</div>
-								</div>
-								<div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
-									<div class="prt_about_experiencebox">
-										<div class="prt_about_experience_year">
-											<h1>2015</h1>
-											<h4>Jun to 2015 Mar</h4>
-										</div>
-										<div class="prt_about_experience_info">
-											<h4>Senior Ui/Ux Designer</h4>
-											<span>Google</span>
-											<p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam.</p>
-										</div>
-									</div>
-								</div>
-								<div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
-									<div class="prt_about_experiencebox">
-										<div class="prt_about_experience_year">
 											<h1>2016</h1>
-											<h4>Apr to Present</h4>
+											<h4>May to 2017 Jan</h4>
 										</div>
 										<div class="prt_about_experience_info">
-											<h4>Lead Ui/Ux Designer</h4>
-											<span>Google</span>
-											<p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam.</p>
+											<h4>Software Implementation & Testing</h4>
+											<span><a href="https://bilanc.com/">Bilanc</a></span>
+											<p><li>Analyze customer requirements, help to develop solutions.</li>
+<li>Software, mobile application, web testing or other platforms developed by the company.</li>
+<li>Testing component of security, performaces and graphic presentation of data</li>
+<li> Provide technical assistance and support for incoming queries and issues related to computer systems, software, and hardware.</li>
+<li> Ask questions to determine nature of problem. Walk customer through problem-solving process.</li>
+<li>Bugs Identification</li></p>
+										</div>
+									</div>
+								</div>
+								<div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
+									<div class="prt_about_experiencebox">
+										<div class="prt_about_experience_year">
+											<h1>2017</h1>
+											<h4>Oct to 2018 May</h4>
+										</div>
+										<div class="prt_about_experience_info">
+											<h4>Remote Python Developer</h4>
+											<span><a href="https://echoiceparts.com/">Energy Choice</a></span>
+											<p> <li>Design and implement new e-commerce functionality, for front-end and back-end interfaces.</li>
+<li>Configure the droplet/snapshot to ensure the site loads properly.</li>
+<li>Integrate data from various back-end services through the use of REST API connections.</li>
+<li>Developed modules in Javascript, JQuery and Python on ERPNext + Frappe framework</li></p>
+										</div>
+									</div>
+								</div>
+								<div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
+									<div class="prt_about_experiencebox">
+										<div class="prt_about_experience_year">
+											<h1>2017</h1>
+											<h4>Feb to Present</h4>
+										</div>
+										<div class="prt_about_experience_info">
+											<h4>Python Developer</h4>
+											<span><a href="https://www.analytics.al/">Pragmatic Analytics</a></span>
+											<p><li>Use Splunk to collect and index log data. Configuration management, data integration, data transformation, field extraction, event parsing.</li>
+<li> Design and customize complex search queries, promote advanced searching and analytics.</li>
+<li> Develop dashboards, data models, reports and optimize their performance.</li>
+<li>Develop Python applications based on API using Django Framework.</li>
+<li>Maintain relational databases (MySQL / SQLite3/ PostgreSQL)</li>
+<li>Develop user interface applications with modern web UI technologies (HTML5, CSS3, JavaScript, jQuery ,etc)</li>
+<li>Strong skills using the pandas, json, multiprocessing, beautifulsoup, numpy, theano, sciPy, sciKit-learn, matplotlib, seaborn, tensorflow, bokeh, plotly, NLTK, scrapy, statsmodels, openCV, oauthlib, requests and statistics libraries.</li></p>
+										</div>
+									</div>
+								</div>
+								<div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
+									<div class="prt_about_experiencebox">
+										<div class="prt_about_experience_year">
+											<h1>2018</h1>
+											<h4>Oct to Present</h4>
+										</div>
+										<div class="prt_about_experience_info">
+											<h4>Lecturer</h4>
+											<span><a href="https://www.umsh.edu.al/">Mediterranean University of Albania</a></span>
+											<p><li>Information</li>
+<li> Data Structure</li>
+<li> Systems Analysis and Design</li></p>
 										</div>
 									</div>
 								</div>
@@ -267,14 +283,14 @@ Purchase: http://themeforest.net/user/kamleshyadav
 			<div class="container">
 				<div class="row">
 					<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-						<p>Copyright © 2018 <a href="#">Portfolio</a>. All Rights Reserved</p>
+						<p>Copyright © 2019 <a href="#">Portfolio</a>. All Rights Reserved</p>
 						<ul>
-							<li><a href="#"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
-							<li><a href="#"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
-							<li><a href="#"><i class="fa fa-pinterest-p" aria-hidden="true"></i></a></li>
-							<li><a href="#"><i class="fa fa-behance" aria-hidden="true"></i></a></li>
+							<li><a href="https://www.facebook.com/dorela0"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
+							<li><a href="https://twitter.com/DorelaKaraj"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
+							<li><a href="https://www.linkedin.com/in/dorela-karaj/"><i class="fa fa-linkedin" aria-hidden="true"></i></a></li>
+					<!--	<li><a href="#"><i class="fa fa-behance" aria-hidden="true"></i></a></li>
 							<li><a href="#"><i class="fa fa-google-plus" aria-hidden="true"></i></a></li>
-							<li><a href="#"><i class="fa fa-dribbble" aria-hidden="true"></i></a></li>
+							<li><a href="#"><i class="fa fa-dribbble" aria-hidden="true"></i></a></li>-->
 						</ul>
 					</div>
 				</div>
@@ -328,27 +344,22 @@ Purchase: http://themeforest.net/user/kamleshyadav
 					</div>
 					<div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
 						<div class="prt_contact_map">
-							<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3325.7149899484166!2d-92.46035748446522!3d33.534795052266986!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x862d89d84d550aef%3A0xc554ea1ecff51963!2s368+7th+%237%2C+Hampton%2C+AR+71744%2C+USA!5e0!3m2!1sen!2sin!4v1506497917270" allowfullscreen></iframe>
+							<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d5992.995879804326!2d19.81287712608186!3d41.31978446708161!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x13503102c27b29a1%3A0x83c76478ab685ee!2sBlloku%2C%20Tirana%2C%20Albania!5e0!3m2!1sen!2s!4v1568987128599!5m2!1sen!2s"  allowfullscreen=""></iframe>
 						</div>
 					</div>
 				</div>
 				<div class="prt_contact_details">
-					<div class="col-lg-4 col-md-4 col-sm-6 col-xs-12">
-						<div class="prt_contact_details_box details_box1">
-							<h4>Phone</h4>
-							<p>+1-202-555-0125<br>01-202-555-0125</p>
-						</div>
-					</div>
-					<div class="col-lg-4 col-md-4 col-sm-6 col-xs-12">
+				
+					<div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
 						<div class="prt_contact_details_box details_box2">
 							<h4>Email</h4>
 							<p><a href="#">name@yourmail.com</a><br><a href="#">mail@yourname.com</a></p>
 						</div>
 					</div>
-					<div class="col-lg-4 col-md-4 col-sm-6 col-xs-12">
+					<div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
 						<div class="prt_contact_details_box details_box3">
 							<h4>Address</h4>
-							<p>71 Pilgrim Avenue<br>Chevy Chase, MD 20815</p>
+							<p>Tirane<br>Albania</p>
 						</div>
 					</div>
 				</div>
@@ -358,7 +369,7 @@ Purchase: http://themeforest.net/user/kamleshyadav
 			<div class="container">
 				<div class="row">
 					<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-						<p>Copyright © 2018 <a href="#">Portfolio</a>. All Rights Reserved</p>
+						<p>Copyright © 2019 <a href="#">Portfolio</a>. All Rights Reserved</p>
 						<ul>
 							<li><a href="#"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
 							<li><a href="#"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
