--- a/index.html
+++ b/index.html
@@ -318,7 +318,7 @@ Purchase: http://themeforest.net/user/kamleshyadav
 			<div class="container">
 				<div class="row">
 					<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-						<p>Copyright © 2019 <a href="#">Portfolio</a>. All Rights Reserved</p>
+						<p>Copyright © <script>document.write(new Date().getFullYear())</script> <a href="#">Portfolio</a>. All Rights Reserved</p>
 						<ul>
 							<li><a href="https://www.facebook.com/dorela0"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
 							<li><a href="https://twitter.com/DorelaKaraj"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
@@ -404,7 +404,7 @@ Purchase: http://themeforest.net/user/kamleshyadav
 		<div class="container">
 				<div class="row">
 					<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-						<p>Copyright © 2019 <a href="#">Portfolio</a>. All Rights Reserved</p>
+						<p>Copyright © <script>document.write(new Date().getFullYear())</script> <a href="#">Portfolio</a>. All Rights Reserved</p>
 						<ul>
 							<li><a href="https://www.facebook.com/dorela0"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
 							<li><a href="https://twitter.com/DorelaKaraj"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
@@ -572,7 +572,7 @@ Purchase: http://themeforest.net/user/kamleshyadav
 		<div class="container">
 				<div class="row">
 					<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-						<p>Copyright © 2019 <a href="#">Portfolio</a>. All Rights Reserved</p>
+						<p>Copyright © <script>document.write(new Date().getFullYear())</script> <a href="#">Portfolio</a>. All Rights Reserved</p>
 						<ul>
 							<li><a href="https://www.facebook.com/dorela0"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
 							<li><a href="https://twitter.com/DorelaKaraj"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
@@ -776,7 +776,7 @@ Purchase: http://themeforest.net/user/kamleshyadav
 		<div class="container">
 				<div class="row">
 					<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-						<p>Copyright © 2019 <a href="#">Portfolio</a>. All Rights Reserved</p>
+						<p>Copyright © <script>document.write(new Date().getFullYear())</script> <a href="#">Portfolio</a>. All Rights Reserved</p>
 						<ul>
 							<li><a href="https://www.facebook.com/dorela0"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
 							<li><a href="https://twitter.com/DorelaKaraj"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
@@ -803,5 +803,4 @@ Purchase: http://themeforest.net/user/kamleshyadav
 <!--Main js file End-->
 </body>
 
-<!-- Mirrored from kamleshyadav.com/html/portfolio/white_version_video/index.html by HTTrack Website Copier/3.x [XR&CO'2014], Fri, 06 Sep 2019 17:30:14 GMT -->
 </html>
