Adding Google Analytics

--- a/index.html
+++ b/index.html
@@ -32,6 +32,15 @@ Purchase: http://themeforest.net/user/kamleshyadav
 <link rel="stylesheet" type="text/css" href="css/style.css">
 <!-- Favicon Link -->
 <link rel="shortcut icon" type="image/png" href="images/header/favicon.png">
+	<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-158764544-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-158764544-1');
+</script>
 </head>
 <body>
 <!--Preloader Start-->
