--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@ Purchase: http://themeforest.net/user/kamleshyadav
 <link rel="stylesheet" type="text/css" href="css/owl.carousel.min.css">
 <link rel="stylesheet" type="text/css" href="css/owl.theme.default.min.css">
 <link rel="stylesheet" type="text/css" href="css/style.css">
+	<link rel="stylesheet" type="text/css" href="css/blog_style.css">
 <!-- Favicon Link -->
 <link rel="shortcut icon" type="image/png" href="images/header/favicon.png">
 	<!-- Global site tag (gtag.js) - Google Analytics -->
@@ -278,6 +279,22 @@ Purchase: http://themeforest.net/user/kamleshyadav
 						</div>
 					</div>
 				</div>
+				<section id="blog" class="blog">
+  <div class="blog__header">
+    <p class="blog__header1">some of my</p>
+    <h2 class="blog__header2">Medium
+      <span class="blog__header2Span">posts</span>
+    </h2>
+  </div>
+  <ul class="blog__slider">
+    Posts go here
+  </ul>
+<!--  <ul class="blog__counter">-->
+<!--    <li class="blog__counterItem blog__counterItem-active"></li>-->
+<!--    <li class="blog__counterItem"></li>-->
+<!--    <li class="blog__counterItem"></li>-->
+<!--  </ul>-->
+</section>
 				<!--<div class="prt_profile_info">-->
 					<!--<div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">-->
 						<!--<div class="prt_profile_slider">-->
@@ -322,7 +339,9 @@ Purchase: http://themeforest.net/user/kamleshyadav
 					<!--&lt;!&ndash;</div>&ndash;&gt;-->
 				<!--</div>-->
 			</div>
+
 		</div>
+
 		<div class="prt_footer_wrapper prt_toppadder30 prt_bottompadder30">
 			<div class="container">
 				<div class="row">
@@ -332,6 +351,8 @@ Purchase: http://themeforest.net/user/kamleshyadav
 							<li><a href="https://www.facebook.com/dorela0"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
 							<li><a href="https://twitter.com/DorelaKaraj"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
 							<li><a href="https://www.linkedin.com/in/dorela-karaj/"><i class="fa fa-linkedin" aria-hidden="true"></i></a></li>
+														<li><a href="https://medium.com/@dorela"><i class="fa fa-medium" aria-hidden="true"></i></a></li>
+
 					<!--	<li><a href="#"><i class="fa fa-behance" aria-hidden="true"></i></a></li>
 							<li><a href="#"><i class="fa fa-google-plus" aria-hidden="true"></i></a></li>
 							<li><a href="#"><i class="fa fa-dribbble" aria-hidden="true"></i></a></li>-->
@@ -394,13 +415,13 @@ Purchase: http://themeforest.net/user/kamleshyadav
 				</div>
 				<div class="prt_contact_details">
 				
-					<div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
-						<div class="prt_contact_details_box details_box2">
-							<h4>Email</h4>
-							<p><a href="#">name@yourmail.com</a><br><a href="#">mail@yourname.com</a></p>
-						</div>
-					</div>
-					<div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
+<!--					<div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">-->
+<!--						<div class="prt_contact_details_box details_box2">-->
+<!--							<h4>Email</h4>-->
+<!--							<p><a href="#">name@yourmail.com</a><br><a href="#">mail@yourname.com</a></p>-->
+<!--						</div>-->
+<!--					</div>-->
+					<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
 						<div class="prt_contact_details_box details_box3">
 							<h4>Address</h4>
 							<p>Tirane<br>Albania</p>
@@ -418,6 +439,7 @@ Purchase: http://themeforest.net/user/kamleshyadav
 							<li><a href="https://www.facebook.com/dorela0"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
 							<li><a href="https://twitter.com/DorelaKaraj"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
 							<li><a href="https://www.linkedin.com/in/dorela-karaj/"><i class="fa fa-linkedin" aria-hidden="true"></i></a></li>
+							<li><a href="https://medium.com/@dorela"><i class="fa fa-medium" aria-hidden="true"></i></a></li>
 					<!--	<li><a href="#"><i class="fa fa-behance" aria-hidden="true"></i></a></li>
 							<li><a href="#"><i class="fa fa-google-plus" aria-hidden="true"></i></a></li>
 							<li><a href="#"><i class="fa fa-dribbble" aria-hidden="true"></i></a></li>-->
@@ -519,19 +541,19 @@ Purchase: http://themeforest.net/user/kamleshyadav
 					<div id="canvas">
 						<div class="col-lg-3 col-md-3 col-sm-12 col-xs-12 text-center">
 							<div class="circle" id="circles-1"></div>
-							<h5>Photoshop</h5>
+							<h5>Python</h5>
 						</div>
 						<div class="col-lg-3 col-md-3 col-sm-12 col-xs-12 text-center">
 							<div class="circle" id="circles-2"></div>
-							<h5>Illustrator</h5>
+							<h5>Java</h5>
 						</div>
 						<div class="col-lg-3 col-md-3 col-sm-12 col-xs-12 text-center">
 							<div class="circle" id="circles-3"></div>
-							<h5>Html & Css</h5>
+							<h5>AWS</h5>
 						</div>
 						<div class="col-lg-3 col-md-3 col-sm-12 col-xs-12 text-center">
 							<div class="circle" id="circles-4"></div>
-							<h5>WordPress</h5>
+							<h5>Sql/NoSql</h5>
 						</div>
 					</div>
 
@@ -586,6 +608,8 @@ Purchase: http://themeforest.net/user/kamleshyadav
 							<li><a href="https://www.facebook.com/dorela0"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
 							<li><a href="https://twitter.com/DorelaKaraj"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
 							<li><a href="https://www.linkedin.com/in/dorela-karaj/"><i class="fa fa-linkedin" aria-hidden="true"></i></a></li>
+														<li><a href="https://medium.com/@dorela"><i class="fa fa-medium" aria-hidden="true"></i></a></li>
+
 					<!--	<li><a href="#"><i class="fa fa-behance" aria-hidden="true"></i></a></li>
 							<li><a href="#"><i class="fa fa-google-plus" aria-hidden="true"></i></a></li>
 							<li><a href="#"><i class="fa fa-dribbble" aria-hidden="true"></i></a></li>-->
@@ -790,6 +814,8 @@ Purchase: http://themeforest.net/user/kamleshyadav
 							<li><a href="https://www.facebook.com/dorela0"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
 							<li><a href="https://twitter.com/DorelaKaraj"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
 							<li><a href="https://www.linkedin.com/in/dorela-karaj/"><i class="fa fa-linkedin" aria-hidden="true"></i></a></li>
+														<li><a href="https://medium.com/@dorela"><i class="fa fa-medium" aria-hidden="true"></i></a></li>
+
 					<!--	<li><a href="#"><i class="fa fa-behance" aria-hidden="true"></i></a></li>
 							<li><a href="#"><i class="fa fa-google-plus" aria-hidden="true"></i></a></li>
 							<li><a href="#"><i class="fa fa-dribbble" aria-hidden="true"></i></a></li>-->
@@ -800,7 +826,9 @@ Purchase: http://themeforest.net/user/kamleshyadav
 		</div>
 	</div>
 </div>
-<!--Main js file Style--> 
+<!--Main js file Style-->
+
+<script type="text/javascript" src="js/medium_posts.js"></script>
 <script type="text/javascript" src="js/jquery.js"></script> 
 <script type="text/javascript" src="js/bootstrap.js"></script>
 <script type="text/javascript" src="js/jquery.magnific-popup.min.js"></script>
