--- a/index.html
+++ b/index.html
@@ -346,7 +346,7 @@ Purchase: http://themeforest.net/user/kamleshyadav
 			<div class="container">
 				<div class="row">
 					<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-						<p>Copyright © <script>document.write(new Date().getFullYear())</script> <a href="#">Portfolio</a>. All Rights Reserved</p>
+						<p>Copyright ©  <a href="#">Portfolio</a>. All Rights Reserved</p>
 						<ul>
 							<li><a href="https://www.facebook.com/dorela0"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
 							<li><a href="https://twitter.com/DorelaKaraj"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
@@ -434,7 +434,7 @@ Purchase: http://themeforest.net/user/kamleshyadav
 		<div class="container">
 				<div class="row">
 					<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-						<p>Copyright © <script>document.write(new Date().getFullYear())</script> <a href="#">Portfolio</a>. All Rights Reserved</p>
+						<p>Copyright © <a href="#">Portfolio</a>. All Rights Reserved</p>
 						<ul>
 							<li><a href="https://www.facebook.com/dorela0"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
 							<li><a href="https://twitter.com/DorelaKaraj"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
@@ -603,7 +603,7 @@ Purchase: http://themeforest.net/user/kamleshyadav
 		<div class="container">
 				<div class="row">
 					<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-						<p>Copyright © <script>document.write(new Date().getFullYear())</script> <a href="#">Portfolio</a>. All Rights Reserved</p>
+						<p>Copyright © <a href="#">Portfolio</a>. All Rights Reserved</p>
 						<ul>
 							<li><a href="https://www.facebook.com/dorela0"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
 							<li><a href="https://twitter.com/DorelaKaraj"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
@@ -809,7 +809,7 @@ Purchase: http://themeforest.net/user/kamleshyadav
 		<div class="container">
 				<div class="row">
 					<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-						<p>Copyright © <script>document.write(new Date().getFullYear())</script> <a href="#">Portfolio</a>. All Rights Reserved</p>
+						<p>Copyright ©  <a href="#">Portfolio</a>. All Rights Reserved</p>
 						<ul>
 							<li><a href="https://www.facebook.com/dorela0"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
 							<li><a href="https://twitter.com/DorelaKaraj"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
