--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@ Purchase: http://themeforest.net/user/kamleshyadav
 		</div>
 	</div>
 <!--About Wrapper Start-->
-	<div class="prt_about_wrapper prt_toppadder115">
+	<div class="prt_about_wrapper prt_toppadder115" style="overflow-y:auto;">
 		<div class="prt_close_wrapper">
 			<img src="images/header/down_arrow.png" alt="Close" class="prt_close">
 		</div>
