--- a/index.html
+++ b/index.html
@@ -66,8 +66,8 @@ Purchase: http://themeforest.net/user/kamleshyadav
 			<source src="images/light_v.mp4" type="video/mp4">
 			Your browser does not support HTML5 video.
 		</video>
-		<script>const video = document.getElementById('myVideo');
-video.play();</script>
+		<!--<script>const video = document.getElementById('myVideo');-->
+<!--video.play();</script>-->
 		<div class="container">
 			<div class="row">
 				<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
