--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@ Purchase: http://themeforest.net/user/kamleshyadav
 			<a href="#services" class="prt_bottom">strength</a>
 			<a href="#portfolio" class="prt_left">portfolio</a>
 		</div>
-		<video id="myVideo" style="pointer-events: none;"  preload autoplay muted loop  poster="">
+		<video id="myVideo" style="pointer-events: none;"  preload autoplay muted loop playsinline  poster="">
 			<source src="images/light_v.mp4" type="video/mp4">
 			Your browser does not support HTML5 video.
 		</video>
