--- a/index.html
+++ b/index.html
@@ -62,13 +62,10 @@ Purchase: http://themeforest.net/user/kamleshyadav
 			<a href="#services" class="prt_bottom">strength</a>
 			<a href="#portfolio" class="prt_left">portfolio</a>
 		</div>
-		<video id="myVideo" style="pointer-events: none;"  preload autoplay muted loop playsinline  poster="">
+		<video autoplay muted loop id="myVideo" style="pointer-events: none;">
 			<source src="images/light_v.mp4" type="video/mp4">
 			Your browser does not support HTML5 video.
 		</video>
-		<script>const video = document.getElementById('myVideo');
-		video.muted = true;
-video.play();</script>
 		<div class="container">
 			<div class="row">
 				<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
