--- a/index.html
+++ b/index.html
@@ -36,11 +36,11 @@ Purchase: http://themeforest.net/user/kamleshyadav
 	<!-- Global site tag (gtag.js) - Google Analytics -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=UA-158764544-1"></script>
 <script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
+	window.dataLayer = window.dataLayer || [];
+	function gtag(){dataLayer.push(arguments);}
+	gtag('js', new Date());
 
-  gtag('config', 'UA-158764544-1');
+	gtag('config', 'UA-158764544-1');
 </script>
 </head>
 <body>
@@ -84,7 +84,7 @@ Purchase: http://themeforest.net/user/kamleshyadav
 				<div class="prt_about_info prt_bottompadder80">
 					<div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
 						<div class="prt_about_img">
-							<img src="images/content/about.jpg" alt="About">
+							<img src="images/content/about2.jpg" alt="About">
 						</div>
 					</div>
 					<div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
@@ -269,10 +269,10 @@ Purchase: http://themeforest.net/user/kamleshyadav
 											<h4>Remote Python Developer</h4>
 											<span><a href="https://echoiceparts.com/">Energy Choice</a></span>
 											<!--<p> <li>Design and implement new e-commerce functionality, for front-end and back-end interfaces.</li>-->
-<!--<li>Configure the droplet/snapshot to ensure the site loads properly.</li>-->
-<!--<li>Integrate data from various back-end services through the use of REST API connections.</li>-->
-<!--<li>Developed modules in Javascript, JQuery and Python on ERPNext + Frappe framework</li></p>-->
-										</div>
+											<!--<li>Configure the droplet/snapshot to ensure the site loads properly.</li>-->
+											<!--<li>Integrate data from various back-end services through the use of REST API connections.</li>-->
+											<!--<li>Developed modules in Javascript, JQuery and Python on ERPNext + Frappe framework</li></p>-->
+																					</div>
 									</div>
 								</div>
 							</div>
@@ -280,21 +280,16 @@ Purchase: http://themeforest.net/user/kamleshyadav
 					</div>
 				</div>
 				<section id="blog" class="blog">
-  <div class="blog__header">
-    <p class="blog__header1">some of my</p>
-    <h2 class="blog__header2">Medium
-      <span class="blog__header2Span">posts</span>
-    </h2>
-  </div>
-  <ul class="blog__slider">
-    Posts go here
-  </ul>
-<!--  <ul class="blog__counter">-->
-<!--    <li class="blog__counterItem blog__counterItem-active"></li>-->
-<!--    <li class="blog__counterItem"></li>-->
-<!--    <li class="blog__counterItem"></li>-->
-<!--  </ul>-->
-</section>
+					<div class="blog__header">
+						<p class="blog__header1">some of my</p>
+						<h2 class="blog__header2">Medium
+						<span class="blog__header2Span">posts</span>
+						</h2>
+					</div>
+					<ul class="blog__slider">
+						Posts go here
+					</ul>
+                </section>
 				<!--<div class="prt_profile_info">-->
 					<!--<div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">-->
 						<!--<div class="prt_profile_slider">-->
@@ -626,7 +621,7 @@ Purchase: http://themeforest.net/user/kamleshyadav
 		</div>
 		<div class="container">
 			<div class="row">
-				<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+				<div class="">
 					<div class="prt_heading_wrapper">
 						<div class="prt_heading">
 							<h1>portfolio</h1>
@@ -634,7 +629,9 @@ Purchase: http://themeforest.net/user/kamleshyadav
 						</div>
 					</div>
 				</div>
-				<div class="prt_portfolio_box popup-gallery">
+			</div>
+			<div class="prt_portfolio_box popup-gallery">
+			    <div class="row">
 					<div class="col-lg-4 col-md-4 col-sm-4 col-xs-12 prt_loadmore">
 						<a class="imageopen" href="images/content/port1_big.jpg" title="">
 							<div class="prt_portfolio_img">
@@ -656,15 +653,6 @@ Purchase: http://themeforest.net/user/kamleshyadav
 						</a>
 					</div>
 					<div class="col-lg-4 col-md-4 col-sm-4 col-xs-12 prt_loadmore">
-						<a class="popup-youtube" href="https://www.youtube.com/watch?v=6yWzKvQXsYM" title="">
-							<div class="prt_portfolio_img">
-								<img src="images/content/port3.jpg" alt="Portfolio">
-								<div class="prt_portfolio_text">
-									<h4>Click and open video</h4>
-									<p>video</p>
-								</div>
-							</div>
-						</a>
 						<a class="imageopen" href="images/content/port4_big.jpg" title="">
 							<div class="prt_portfolio_img">
 								<img src="images/content/port4.jpg" alt="Portfolio">
@@ -674,17 +662,17 @@ Purchase: http://themeforest.net/user/kamleshyadav
 								</div>
 							</div>
 						</a>
-					</div>
-					<div class="col-lg-4 col-md-4 col-sm-4 col-xs-12 prt_loadmore">
 						<a class="popup-youtube" href="https://www.youtube.com/watch?v=6yWzKvQXsYM" title="">
 							<div class="prt_portfolio_img">
-								<img src="images/content/port5.jpg" alt="Portfolio">
+								<img src="images/content/port3.jpg" alt="Portfolio">
 								<div class="prt_portfolio_text">
 									<h4>Click and open video</h4>
 									<p>video</p>
 								</div>
 							</div>
 						</a>
+					</div>
+					<div class="col-lg-4 col-md-4 col-sm-4 col-xs-12 prt_loadmore">
 						<a class="imageopen" href="images/content/port6_big.jpg" title="">
 							<div class="prt_portfolio_img">
 								<img src="images/content/port6.jpg" alt="Portfolio">
@@ -694,8 +682,19 @@ Purchase: http://themeforest.net/user/kamleshyadav
 								</div>
 							</div>
 						</a>
+						<a class="popup-youtube" href="https://www.youtube.com/watch?v=6yWzKvQXsYM" title="">
+							<div class="prt_portfolio_img">
+								<img src="images/content/port5.jpg" alt="Portfolio">
+								<div class="prt_portfolio_text">
+									<h4>Click and open video</h4>
+									<p>video</p>
+								</div>
+							</div>
+						</a>
 					</div>
-					<div class="col-lg-8 col-md-8 col-sm-8 col-xs-12 prt_loadmore">
+				</div>
+				<div class="row">
+					<div class="col-lg-4 col-md-4 col-sm-4 col-xs-12 prt_loadmore">
 						<a class="imageopen" href="images/content/port7_big.jpg" title="">
 							<div class="prt_portfolio_img">
 								<img src="images/content/port7.jpg" alt="Portfolio">
@@ -704,9 +703,7 @@ Purchase: http://themeforest.net/user/kamleshyadav
 									<p>Mockup</p>
 								</div>
 							</div>
-						</a>
-					</div>
-					<div class="col-lg-4 col-md-4 col-sm-4 col-xs-12 prt_loadmore">
+						</a>					
 						<a class="popup-youtube" href="https://www.youtube.com/watch?v=6yWzKvQXsYM" title="">
 							<div class="prt_portfolio_img">
 								<img src="images/content/port8.jpg" alt="Portfolio">
@@ -738,15 +735,6 @@ Purchase: http://themeforest.net/user/kamleshyadav
 						</a>
 					</div>
 					<div class="col-lg-4 col-md-4 col-sm-4 col-xs-12 prt_loadmore">
-						<a class="popup-youtube" href="https://www.youtube.com/watch?v=6yWzKvQXsYM" title="">
-							<div class="prt_portfolio_img">
-								<img src="images/content/port3.jpg" alt="Portfolio">
-								<div class="prt_portfolio_text">
-									<h4>Click and open video</h4>
-									<p>video</p>
-								</div>
-							</div>
-						</a>
 						<a class="imageopen" href="images/content/port4_big.jpg" title="">
 							<div class="prt_portfolio_img">
 								<img src="images/content/port4.jpg" alt="Portfolio">
@@ -756,17 +744,19 @@ Purchase: http://themeforest.net/user/kamleshyadav
 								</div>
 							</div>
 						</a>
-					</div>
-					<div class="col-lg-4 col-md-4 col-sm-4 col-xs-12 prt_loadmore">
 						<a class="popup-youtube" href="https://www.youtube.com/watch?v=6yWzKvQXsYM" title="">
 							<div class="prt_portfolio_img">
-								<img src="images/content/port5.jpg" alt="Portfolio">
+								<img src="images/content/port3.jpg" alt="Portfolio">
 								<div class="prt_portfolio_text">
 									<h4>Click and open video</h4>
 									<p>video</p>
 								</div>
 							</div>
 						</a>
+					</div>
+				</div>
+				<!-- <div class="row">
+					<div class="col-lg-4 col-md-4 col-sm-4 col-xs-12 prt_loadmore">
 						<a class="imageopen" href="images/content/port6_big.jpg" title="">
 							<div class="prt_portfolio_img">
 								<img src="images/content/port6.jpg" alt="Portfolio">
@@ -776,8 +766,17 @@ Purchase: http://themeforest.net/user/kamleshyadav
 								</div>
 							</div>
 						</a>
+						<a class="popup-youtube" href="https://www.youtube.com/watch?v=6yWzKvQXsYM" title="">
+							<div class="prt_portfolio_img">
+								<img src="images/content/port5.jpg" alt="Portfolio">
+								<div class="prt_portfolio_text">
+									<h4>Click and open video</h4>
+									<p>video</p>
+								</div>
+							</div>
+						</a>
 					</div>
-					<div class="col-lg-8 col-md-8 col-sm-8 col-xs-12 prt_loadmore">
+					<div class="col-lg-4 col-md-4 col-sm-4 col-xs-12 prt_loadmore">
 						<a class="imageopen" href="images/content/port7_big.jpg" title="">
 							<div class="prt_portfolio_img">
 								<img src="images/content/port7.jpg" alt="Portfolio">
@@ -787,8 +786,6 @@ Purchase: http://themeforest.net/user/kamleshyadav
 								</div>
 							</div>
 						</a>
-					</div>
-					<div class="col-lg-4 col-md-4 col-sm-4 col-xs-12 prt_loadmore">
 						<a class="popup-youtube" href="https://www.youtube.com/watch?v=6yWzKvQXsYM" title="">
 							<div class="prt_portfolio_img">
 								<img src="images/content/port8.jpg" alt="Portfolio">
@@ -799,6 +796,8 @@ Purchase: http://themeforest.net/user/kamleshyadav
 							</div>
 						</a>
 					</div>
+				</div> -->
+				<div class="row">
 					<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 text-center">
 						<button class="prt_btn" id="loadMore">load more</button>
 					</div>
