--- a/index.html
+++ b/index.html
@@ -95,7 +95,11 @@ Purchase: http://themeforest.net/user/kamleshyadav
 							</div>
 						</div>
 						<div class="prt_about_details">
-							<p>I am an experienced Python Developer with a demonstrated history of working in software development. Certified in multiple programming languages and technologies like Python, Javascript, HTML5 and CSS3. Strong engineering background with a Master of Science (MSc) focused in Information Systems from University of Tirana. An experienced lecturer, teaching Computer Science classes in different Universities of Albania. Very Good in communication, team spirit, analyzing, planning and solving various problems during the work day. Interested in the fourth Industrail Revolution - AI, ML and IoT. Fulltime Passionate programmer, Python Addicted, Udemy Scavenger, Constant Upskiller in niche technologies. </p>
+							<p>Profilic, full stack web developer with a passion for metrics and beatin former "best-yets". Prototyped 10 new product features per year for Sprk. Consistently receive high performance scores for all Web APIs and web development projects, including RPM, average and max latency, API usage growth and more for Sisal. 
+Passionate about building world class web applications from scratch. One of them received a 1st Prize at Creative Business Cup Albania 2019 and recently Sprk in 5 Top Startups creating Food Distribution Solutions. 
+Certified in multiple programming languages and technologies like Python, Javascript, HTML5 and CSS3 with keen-to-learn passion in order to achieve higher standards of performance. 
+ An experienced lecturer, teaching Computer Science classes in different Universities of Albania. Very Good in communication, team spirit, analyzing, planning and solving various problems during the work day.
+ Interested in the fourth Industrail Revolution - AI, ML and IoT. Fulltime Passionate programmer, Python Addicted, Udemy Scavenger, Constant Upskiller in niche technologies. </p>
 							<a href="#" class="prt_btn">Download Resume</a> <a href="https://www.linkedin.com/in/dorela-karaj/" class="prt_btn">Hire Me</a>
 						</div>
 					</div>
